--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>My First Github Org Page</title>
 </head>
 <body>
-<h1>Welcome to my page</h1>>
+<h1>Welcome to my page</h1>
 </body>
 </html>
