button theme changed

--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 <body>
 <h1>Welcome to my page</h1>
 <div class="Welcome">Hi! all..</div>
-<button name="button" id="button" class="bootstrap-theme">my button</button>
+<button name="button" id="button" class="btn btn-primary">my button</button>
 </body>
 </html>
