--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 </head>
 <body>
 <h1>Welcome to my page</h1>
-<div class="Welcome">Hi! all..</div>
-<button name="button" id="button" class="btn btn-primary">my button</button>
+<div class="Welcome">Hi! all..</div><br>
+	<div class="well">
+<button name="button" id="button" class="btn btn-primary">my button</button></div>
 </body>
 </html>
