--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/bootstrap-theme.min.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
         <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-        
+        <link rel="stylesheet" href="css/mycss.css" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         
@@ -25,7 +25,17 @@
 </head>
 <body>
 <h1>Welcome to my page</h1>
-<div class="Welcome">Hi! all..</div>
-<button name="button" id="button" class="bootstrap-theme">my button</button>
+<div class="code">Hi! all..</div>
+<button name="button" id="button" class="btn btn-primary">my button</button>
+<div class="well">
+	<div class="container first"></div>
+	<div class="container second"></div>
+	<div class="container third"></div>
+	<br>
+	<div class="container fourth"></div>
+	<div class="container fifth"></div>
+	<div class="container sixth"></div>
+
+</div>
 </body>
 </html>
