--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <object data="./assets/subodhKumarCV.pdf" width="80%" class="cvobject">
           <p>
             Alternative text - include a link
-            <a href="./assets/subodhKumarCV.pdf">to the PDF!</a>
+            <a href="./assets/Subodh Kumar CV.pdf">to the PDF!</a>
           </p>
         </object>
       </div>
