--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
     <section id="cv">
       <div id="cvsection" class="container">
         <div>
-          <a href="./assets/subodhKumarCV.pdf" target="_blank">DOWNLOAD</a>
+          <a href="./assets/Subodh Kumar CV.pdf" target="_blank">DOWNLOAD</a>
         </div>
-        <object data="./assets/subodhKumarCV.pdf" width="80%" class="cvobject">
+        <object
+          data="./assets/Subodh Kumar CV.pdf"
+          width="80%"
+          class="cvobject"
+        >
           <p>
             Alternative text - include a link
             <a href="./assets/Subodh Kumar CV.pdf">to the PDF!</a>
