Update images and remove unwanted sections

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul>
               <li><a class="navitem" href="#home">Home</a></li>
               <li><a class="navitem" href="#experience">Experience</a></li>
-              <li><a class="navitem" href="#skills">Tech Stacks</a></li>
+              <!-- <li><a class="navitem" href="#skills">Tech Stacks</a></li> -->
               <li>
                 <a class="navitem" href="#cv">Resume </a>
               </li>
@@ -41,9 +41,9 @@
     <section id="experience">
       <div id="experiencesection" class="container"></div>
     </section>
-    <section id="skills">
+    <!-- <section id="skills">
       <div id="skillsssection" class="container"></div>
-    </section>
+    </section> -->
     <section id="cv">
       <div id="cvsection" class="container">
         <div>
